# uiautodev

./: .coveragerc  .gitignore  DEVELOP.md  Makefile  README.md  codecov.yml  main.py  pyproject.toml  pytest.ini  run-dev.sh  runtest.sh  source.xml
.github/workflows/: main.yml  release.yml
app_inspector/: __main__.py  app.py  device_driver.py  model.py  provider.py
appinspector/: __init__.py  __main__.py  app.py  appium_proxy.py  cli.py  command_proxy.py  command_types.py  device_driver.py  exceptions.py  model.py  provider.py
appinspector/driver/: android.py  appium.py  base.py  ios.py  mock.py
appinspector/router/: android.py  device.py
appinspector/utils/: common.py  exceptions.py  usbmux.py
chrome_plugin/: background.js  client.js  d.js  manifest.json  options.html  popup.css  popup.html  popup.js
e2etests/: test_harmony_driver.py  test_scrcpy.py
examples/: harmony-video.html
mobile_tests/: test_udt.py
tests/: test_android.py  test_api.py  test_harmony_driver.py  test_pydantic.py  test_touch_controller.py
uiauto_dev/: __init__.py  __main__.py  app.py  case.py  cli.py  command_proxy.py  command_types.py  exceptions.py  model.py  provider.py
uiauto_dev/driver/: android.py  appium.py  base_driver.py  ios.py  mock.py
uiauto_dev/driver/udt/: appium-uiautomator2-v5.12.4-light.apk  udt.py
uiauto_dev/router/: device.py  xml.py
uiauto_dev/static/: demo.html
uiauto_dev/utils/: common.py  exceptions.py  usbmux.py
uiautodev/: __init__.py  __main__.py  app.py  case.py  cli.py  command_proxy.py  command_types.py  common.py  exceptions.py  model.py  provider.py
uiautodev/driver/: android.py  appium.py  base_driver.py  harmony.py  ios.py  mock.py
uiautodev/driver/android/: __init__.py  adb_driver.py  common.py  u2_driver.py
uiautodev/driver/testdata/: layout.json
uiautodev/driver/udt/: udt.py
uiautodev/remote/: android_input.py  harmony_mjpeg.py  harmony_scrcpy.py  keycode.py  pipe.py  scrcpy.py  scrcpy3.py  touch_controller.py
uiautodev/router/: android.py  device.py  proxy.py  record.py
uiautodev/utils/: common.py  envutils.py  exceptions.py  usbmux.py
