[tool.poetry]
name = "uiautodev"
version = "0.0.0"
description = "Mobile UI Automation, include UI hierarchy inspector, script recorder"
homepage = "https://uiauto.dev"
authors = ["codeskyblue <codeskyblue@gmail.com>"]
license = "MIT"
readme = "README.md"

include = [
    {path = "uiautodev/binaries/scrcpy.jar"}
]

[tool.poetry.dependencies]
python = "^3.8"
pillow = "*"
adbutils = ">=2.8.10,<3"
construct = "*"
lxml = "*"
click = "^8.1.7"
pygments = ">=2"
uiautomator2 = ">=2"
httpx = "*"
fastapi = "^0.111.0"
poetry = "^1.8.2"
pydantic = "^2.6"
wdapy = "^0.2.2"
uvicorn = "*"
websockets = ">=10.4"

[tool.poetry.scripts]
"uiauto.dev" = "uiautodev.__main__:main"
"uiautodev" = "uiautodev.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
isort = "^5.13.2"
pytest-cov = "^4.1.0"

[tool.poetry-dynamic-versioning] # 根据tag来动态配置版本号
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
