[tool.poetry]
name = "uiautodev"
version = "0.0.0"
description = "Mobile UI Automation, include UI hierarchy inspector, script recorder"
homepage = "https://uiauto.dev"
authors = ["codeskyblue <codeskyblue@gmail.com>"]
license = "MIT"
readme = "README.md"

include = [
    {path = "uiautodev/binaries/scrcpy.jar"}
]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "*"
adbutils = ">=2.8.10,<3"
click = "^8.1.7"
pygments = ">=2"
uiautomator2 = ">=3.2.0,<4"
fastapi = "0.115.12"
pydantic = "^2.6"
wdapy = ">0.2.2,<1"
websockets = ">=10.4"
Pillow = "*"
construct = "*"
lxml = "*"
httpx = "*"
uvicorn = ">=0.33.0"
rich = "*"
python-multipart = ">=0.0.18"
xdevice = { path = "uiautodev/binaries/xdevice-5.0.7.200.tar.gz" }
xdevice-devicetest = { path = "uiautodev/binaries/xdevice-devicetest-5.0.7.200.tar.gz" }
xdevice-ohos = { path = "uiautodev/binaries/xdevice-ohos-5.0.7.200.tar.gz" }
hypium = { path = "uiautodev/binaries/hypium-5.0.7.200.tar.gz" }

[tool.poetry.extras]
harmony = ["setuptools", "xdevice", "xdevice-devicetest", "xdevice-ohos", "hypium"]

[tool.poetry.scripts]
"uiauto.dev" = "uiautodev.__main__:main"
"uiautodev" = "uiautodev.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
isort = "^5.13.2"
pytest-cov = "^4.1.0"

[tool.poetry-dynamic-versioning] # 根据tag来动态配置版本号
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
