[tool.poetry]
name = "uiautodev"
version = "0.0.0"
description = "Mobile UI Automation, include UI hierarchy inspector, script recorder"
homepage = "https://uiauto.dev"
authors = ["codeskyblue <codeskyblue@gmail.com>"]
license = "MIT"
readme = "README.md"

include = [
    {path = "uiautodev/binaries/scrcpy.jar"}
]

[tool.poetry.dependencies]
python = "^3.8"
adbutils = ">=2.8.10,<3"
click = "^8.1.7"
pygments = ">=2"
uiautomator2 = ">=3.2.0,<4"
fastapi = ">=0.115.12,<1"
pydantic = "^2.6"
wdapy = ">0.2.2,<1"
websockets = ">=10.4"
Pillow = ">=9"
construct = "*"
lxml = ">=6.0.2"
httpx = ">=0.28.1"
uvicorn = ">=0.33.0"
rich = "*"
python-multipart = ">=0.0.18"
hypium = {version="^6.0.7.200", optional=true}

[tool.poetry.extras]
harmony = ["hypium"]

[tool.poetry.scripts]
"uiauto.dev" = "uiautodev.__main__:main"
"uiautodev" = "uiautodev.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
isort = "^5.13.2"
pytest-cov = "^4.1.0"

[tool.poetry-dynamic-versioning] # 根据tag来动态配置版本号
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
